[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aocd>=0.1",
    "icecream>=2.1.4",
    "matplotlib>=3.10.1",
    "more-itertools>=10.6.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pyperclip>=1.9.0",
    "python-benedict>=0.34.1",
    "shapely>=2.0.7",
    "sympy>=1.13.3",
    "tqdm>=4.67.1",
]
